# thinkific-tutor-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  keepalive.yml
static/: helper-widget.js  thinkific-widget.js
tests/: test_api.py  test_course_mapper.py  test_live_smoke.py  test_monitoring.py  test_public_helper.py  test_rate_limiter.py
thinkific_tutor/: __init__.py  api.py  bootstrap.py  course_mapper.py  helper_catalog.py  helper_llm.py  helper_monitoring.py  helper_router.py  helper_schemas.py  helper_settings.py  monitoring.py  rate_limiter.py  schemas.py  settings.py
thinkific_tutor/helper_data/: assistant_notes.json  discovered_urls.json  pages.json
